PLAT-1426: Upgrade to Java to 21, Jakarta Servlet to 6.0, and other libs
Test Plan: Check is build green

Reviewers: #frontend, semsudin.mekanic

Reviewed By: #frontend, semsudin.mekanic

Differential Revision: https://phabricator.softicar.com/D21549